# rustix3-stable

./: Cargo.toml
src/: client.rs  error.rs  models.rs
tests/: e2e.rs
